# kadaiE

./: README.md  kadaiE.py  pyproject.toml
kadaie_1/: main.py
